--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -57,9 +57,10 @@ jobs:
           echo "CONFIG_TARGET_INITRAMFS_COMPRESSION_ZSTD=y\n" >> .config
           echo "CONFIG_PACKAGE_luci=y\n" >> .config
           echo "CONFIG_PACKAGE_nss-firmware-ipq8074=y\n" >> .config
+          echo "CONFIG_PACKAGE_kmod-qca-nss-dp=y\n" >> .config
           echo "CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe=y\n" >> .config
-          echo "CONFIG_PACKAGE_kmod-qca-nss-ecm=y\n" >> .config
-          echo "CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr=y\n" >> .config
+          #echo "CONFIG_PACKAGE_kmod-qca-nss-ecm=y\n" >> .config
+          #echo "CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr=y\n" >> .config
           echo "CONFIG_PACKAGE_luci-app-openvpn=y" >> .config
           echo "CONFIG_PACKAGE_luci-app-wireguard=y" >> .config
           echo "CONFIG_PACKAGE_luci-app-ddns=y" >> .config
