--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -122,7 +122,15 @@ jobs:
           echo "CONFIG_PACKAGE_kmod-nft-offload=y" >> .config
           echo "CONFIG_NETFILTER_NETLINK=m" >> .config
           echo "CONFIG_NETFILTER_NETLINK_HOOK=m" >> .config
-        
+          #ipv6
+          # IPv6 support
+          echo "CONFIG_PACKAGE_luci-proto-ipv6=y" >> .config
+          echo "CONFIG_PACKAGE_6in4=y" >> .config
+          echo "CONFIG_PACKAGE_6to4=y" >> .config
+          echo "CONFIG_PACKAGE_6rd=y" >> .config
+          echo "CONFIG_PACKAGE_kmod-sit=y" >> .config          
+          
+          
           make defconfig
       - name: Enable WiFi on default config
         run: |
