--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -123,12 +123,12 @@ jobs:
           echo "CONFIG_NETFILTER_NETLINK=m" >> .config
           echo "CONFIG_NETFILTER_NETLINK_HOOK=m" >> .config
           #ipv6
-          # IPv6 support
-          echo "CONFIG_PACKAGE_luci-proto-ipv6=y" >> .config
-          echo "CONFIG_PACKAGE_6in4=y" >> .config
-          echo "CONFIG_PACKAGE_6to4=y" >> .config
-          echo "CONFIG_PACKAGE_6rd=y" >> .config
-          echo "CONFIG_PACKAGE_kmod-sit=y" >> .config          
+          # IPv6 support - removed because interfere with nftables
+          #echo "CONFIG_PACKAGE_luci-proto-ipv6=y" >> .config
+          #echo "CONFIG_PACKAGE_6in4=y" >> .config
+          #echo "CONFIG_PACKAGE_6to4=y" >> .config
+          #echo "CONFIG_PACKAGE_6rd=y" >> .config
+          #echo "CONFIG_PACKAGE_kmod-sit=y" >> .config          
           
           
           make defconfig
@@ -182,6 +182,6 @@ jobs:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
           prerelease: true
           title: 'Updated prebuilt images (${{ env.BUILDINFO }})'
-          automatic_release_tag: ipq807x-latest@v4.2
+          automatic_release_tag: ipq807x-latest@v4.3
           files: bin/targets/ipq807x/generic/*
      
