--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -124,11 +124,11 @@ jobs:
           echo "CONFIG_NETFILTER_NETLINK_HOOK=m" >> .config
           #ipv6
           # IPv6 support - removed because interfere with nftables
-          #echo "CONFIG_PACKAGE_luci-proto-ipv6=y" >> .config
-          #echo "CONFIG_PACKAGE_6in4=y" >> .config
-          #echo "CONFIG_PACKAGE_6to4=y" >> .config
-          #echo "CONFIG_PACKAGE_6rd=y" >> .config
-          #echo "CONFIG_PACKAGE_kmod-sit=y" >> .config          
+          echo "CONFIG_PACKAGE_luci-proto-ipv6=y" >> .config
+          echo "CONFIG_PACKAGE_6in4=y" >> .config
+          echo "CONFIG_PACKAGE_6to4=y" >> .config
+          echo "CONFIG_PACKAGE_6rd=y" >> .config
+          echo "CONFIG_PACKAGE_kmod-sit=y" >> .config          
           
           
           make defconfig
