--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -129,14 +129,14 @@ jobs:
           echo "CONFIG_NETFILTER_NETLINK=m" >> .config
           echo "CONFIG_NETFILTER_NETLINK_HOOK=m" >> .config
           # IPv6 support 
-          echo "CONFIG_PACKAGE_luci-proto-ipv6=y" >> .config
-          echo "CONFIG_PACKAGE_kmod-nft-ipt6=y" >> .config
-          echo "CONFIG_PACKAGE_kmod-nft-reject6=y" >> .config
-          echo "CONFIG_PACKAGE_kmod-nft-conntrack6=y" >> .config
-          echo "CONFIG_PACKAGE_6in4=y" >> .config
-          echo "CONFIG_PACKAGE_6to4=y" >> .config
-          echo "CONFIG_PACKAGE_6rd=y" >> .config
-          echo "CONFIG_PACKAGE_kmod-sit=y" >> .config          
+          #echo "CONFIG_PACKAGE_luci-proto-ipv6=y" >> .config
+          #echo "CONFIG_PACKAGE_kmod-nft-ipt6=y" >> .config
+          #echo "CONFIG_PACKAGE_kmod-nft-reject6=y" >> .config
+          #echo "CONFIG_PACKAGE_kmod-nft-conntrack6=y" >> .config
+          #echo "CONFIG_PACKAGE_6in4=y" >> .config
+          #echo "CONFIG_PACKAGE_6to4=y" >> .config
+          #echo "CONFIG_PACKAGE_6rd=y" >> .config
+          #echo "CONFIG_PACKAGE_kmod-sit=y" >> .config          
           
           
           make defconfig
