--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -121,7 +121,7 @@ jobs:
           echo "CONFIG_PACKAGE_nftables=y" >> .config
           echo "CONFIG_PACKAGE_kmod-nft-offload=y" >> .config
           #echo "CONFIG_PACKAGE_kmod-nft-conntrack=y" >> .config
-          echo "CONFIG_PACKAGE_kmod-nft-flow=y" >> .config
+          #echo "CONFIG_PACKAGE_kmod-nft-flow=y" >> .config
           echo "CONFIG_PACKAGE_kmod-nft-ipt=y" >> .config
           echo "CONFIG_PACKAGE_kmod-nft-nat=y" >> .config
           echo "CONFIG_PACKAGE_kmod-nft-reject=y" >> .config
