--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -122,15 +122,14 @@ jobs:
           echo "CONFIG_PACKAGE_kmod-nft-offload=y" >> .config
           echo "CONFIG_NETFILTER_NETLINK=m" >> .config
           echo "CONFIG_NETFILTER_NETLINK_HOOK=m" >> .config
-          # IPv6 support 
+          #ipv6
+          # IPv6 support - removed because interfere with nftables
           echo "CONFIG_PACKAGE_luci-proto-ipv6=y" >> .config
           echo "CONFIG_PACKAGE_kmod-nft-ipt6=y" >> .config
           echo "CONFIG_PACKAGE_6in4=y" >> .config
           echo "CONFIG_PACKAGE_6to4=y" >> .config
           echo "CONFIG_PACKAGE_6rd=y" >> .config
-          echo "CONFIG_PACKAGE_kmod-sit=y" >> .config          
-          
-          
+          echo "CONFIG_PACKAGE_kmod-sit=y" >> .config      
           make defconfig
       - name: Enable WiFi on default config
         run: |
