--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: robimarko/openwrt
-          ref: ipq807x-5.15
+          ref: ipq807x-5.15-pr
       - name: Update and install feeds
         run: |
           ./scripts/feeds update -a
@@ -64,7 +64,8 @@ jobs:
           echo 'CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y' >> .config
           echo 'CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53"' >> .config
           #firmware
-          echo "CONFIG_PACKAGE_nss-firmware-ipq8074=y" >> .config
+          # HW offloading is not active so we do not need this
+          #echo "CONFIG_PACKAGE_nss-firmware-ipq8074=y" >> .config
           echo "CONFIG_PACKAGE_kmod-qca-nss-dp=y" >> .config
           #echo "CONFIG_PACKAGE_kmod-qca-nss-ecm=y\n" >> .config
           #echo "CONFIG_PACKAGE_kmod-qca-nss-drv=y\n" >> .config
@@ -139,6 +140,9 @@ jobs:
           # OpenVPN
           # echo "CONFIG_PACKAGE_luci-app-openvpn=y" >> .config
           # echo "CONFIG_PACKAGE_openvpn-openssl=y" >> .config
+          # WolfSSL
+          #echo "CONFIG_PACKAGE_wpad-basic-wolfssl=m\n" >> .config
+          #echo "CONFIG_PACKAGE_wpad-wolfssl=y\n" >> .config
           make defconfig
       - name: Enable WiFi on default config
         run: |
