--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: robimarko/openwrt
-          ref: ipq807x-5.15
+          ref: ipq807x-5.15-pr
       - name: Update and install feeds
         run: |
           ./scripts/feeds update -a
@@ -184,7 +184,7 @@ jobs:
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
           prerelease: true
-          title: 'Updated prebuilt images (v5.3)'
-          automatic_release_tag: ipq807x-latest@v5.3
+          title: 'Updated prebuilt images (v5.4)'
+          automatic_release_tag: ipq807x-latest@v5.4
           files: bin/targets/ipq807x/generic/*
      
