--- a/.github/workflows/ipq807x.yaml
+++ b/.github/workflows/ipq807x.yaml
@@ -14,7 +14,7 @@ jobs:
           curl -sL "https://api.github.com/repos/$REMOTE_REPOSITORY/commits?sha=$REMOTE_BRANCH&per_page=1" | jq -r '[.[]][0]' > commit.json
         env:
           REMOTE_REPOSITORY: robimarko/openwrt
-          REMOTE_BRANCH: ipq807x-6.1
+          REMOTE_BRANCH: ipq807x-5.15-pr
       - name: Calculate hours since last commit
         id: calc
         run: |
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: robimarko/openwrt
-          ref: ipq807x-6.1
+          ref: ipq807x-5.15-pr
       - name: Update and install feeds
         run: |
           ./scripts/feeds update -a
